--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     onchange="idFieldChanged()" title="Type id of record which you want to show or delete.">
             </td>
             <td><button title="Click to find record with given id." onclick="findById()">findById</button></td>
-            <td>
+            <!-- <td>
                 <button ng-click="deleteById()" title="Click to delete record with given id.">deleteById</button>
-            </td>
+            </td> -->
             <td>
                 <button ng-click="addRecordHandler()" title="Click to add new record empty row.">addRecord</button>
             </td>
@@ -103,6 +103,7 @@
     <script src='/js/main.js'></script>
     <script src="/js/VirtualTable.js"></script>
     <script src="/js/hello.js"></script>
+    <script src="js/templates/HttpRequestTemplate.js"></script>
 </body>
 
 </html>
