Rozpoczęto tworzenie funkcji zapisu rekordu w bazie danych. Jeśli dana tabela nie zawiera rekordów, wyświetlana jest pusta tablica. Poprawiono funkcję tworzenia komórki danych, tak aby działała poprawnie, gdy wyświetlana tabela jest pusta. Funkcja zapisu rekordu nie jest jeszcze gotowa.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button ng-click="deleteById()" title="Click to delete record with given id.">deleteById</button>
             </td> -->
             <td>
-                <button ng-click="addRecordHandler()" title="Click to add new record empty row.">addRecord</button>
+                <button title="Click to add new record empty row." onclick="addEmptyRecord()">addRecord</button>
             </td>
         </tr>
     </table>
