Dodano funkcję usuwania rekordu o danym id. Pole z datą działa już poprawnie (sprawa backendu).

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </td>
             <td><button title="Click to find record with given id." onclick="findById()">findById</button></td>
             <td>
-                <button title="Click to add new record empty row." onclick="addEmptyRecord()">addRecord</button>
+                <button title="Click to add new record empty row." onclick="addEmptyRecord()">add Record</button>
             </td>
             <td>
                 <button id="undoSaveButton" title="Click to undo saving new record." onclick="undoSaving()">Undo Saving</button>
             </td>
-            <!-- <td>
-                <button ng-click="deleteById()" title="Click to delete record with given id.">deleteById</button>
-            </td> -->
+            <td>
+                <button title="Click to delete record with given id." onclick="deleteById()">deleteById</button>
+            </td>
         </tr>
     </table>
 
