Dodano bibliotekę notifyJS, teraz powiadomienia działają na niej.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="/css/list.css">
     <link rel="stylesheet" href="/css/loader.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
 </head>
 
 <body>
@@ -69,6 +70,7 @@
     <script src="/js/main.js"></script>
     <script src="/js/VirtualTable.js"></script>
     <script src="/js/hello.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 </body>
 
 </html>
